# dessin

./: .gitignore  .gitmodules  Cargo.toml  README.md  run-all-examples.sh  rustfmt.toml  shell.nix
.github/workflows/: rust.yml
algebr/: Cargo.toml  LICENSE  README.md
algebr/src/: angle.rs  lib.rs  vec2.rs
dessin/: Cargo.toml  README.md
dessin-dioxus/: Cargo.toml  README.md
dessin-dioxus/src/: lib.rs
dessin-editor/: Cargo.toml  Dioxus.toml
dessin-editor/src/: macros.rs  main.rs
dessin-image/: Cargo.toml  README.md
dessin-image/examples/: 432logo.rs  logo_432.rs
dessin-image/src/: lib.rs
dessin-macros/: Cargo.toml
dessin-macros/src/: dessin_macro.rs  dessin_macro_old.rs  lib.rs
dessin-pdf/: Cargo.toml  README.md
dessin-pdf/examples/: 432logo.rs  pdf.rs  style_size.rs  test-svg.rs
dessin-pdf/src/: lib.rs  shapes.rs
dessin-svg/: Cargo.toml  README.md
dessin-svg/examples/: 432logo.rs  style_size.rs  svg.rs  test-svg.rs
dessin-svg/src/: lib.rs  shapes.rs
dessin/dessin-macros/: Cargo.toml
dessin/dessin-macros/src/: lib.rs
dessin/examples/: contrib.rs
dessin/src/: contrib.rs  drawing.rs  export.rs  lib.rs  macros.rs  position.rs  shapes.rs  style.rs
dessin/src/contrib/: anchor.rs  arc.rs  circle.rs  diamond.rs  fit.rs  layout.rs  line.rs  padding.rs  polygone.rs  quarter_circle.rs  rectangle.rs  textbox.rs  thick_arc.rs  triangle.rs
dessin/src/shapes/: arc.rs  circle.rs  curve.rs  dynamic.rs  ellipse.rs  embedded.rs  image.rs  line.rs  path.rs  reactive.rs  text.rs
dessin/src/shapes/curve/: keypoint.rs
dessin/src/shapes/text/: font.rs
examples/: 432technologies.rs  Cargo.toml  animation.rs  any_triangle_with_macro.rs  any_triangle_without_macro.rs  arc_with_macro.rs  arc_without_macro.rs  basque_cross_with_macro.rs  basque_cross_without_macro.rs  blue_triangle_with_macro.rs  blue_triangle_without_macro.rs  diamond_with_macro.rs  diamond_without_macro.rs  green_rectangle_with_macro.rs  green_rectangle_without_macro.rs  line_with_macro.rs  line_without_macro.rs  optical_effect_with_macro.rs  optical_effect_without_macro.rs  orange_octogon_whithout_macro.rs  orange_octogon_with_macro.rs  orange_octogon_without_macro.rs  purple_padding.rs  red_circle_with_macro.rs  red_circle_without_macro.rs  right_angle_triangle_with_macro.rs  right_angle_triangle_without_macro.rs  simple.rs  text_rotation.rs  textbox_with_macro.rs  textbox_without_macro.rs  yellow_thick_arc_with_macro.rs  yellow_thick_arc_without_macro.rs
examples/src/: lib.rs
examples/svg-pdf/: .gitignore  Cargo.toml
examples/svg-pdf/src/: main.rs
macros/src/: lib.rs
src/: angle.rs  contrib.rs  drawing.rs  lib.rs  macros.rs  position.rs  shapes.rs  style.rs  vec2.rs
src/shapes/: arc.rs  circle.rs  drawing.rs  embedded.rs  image.rs  line.rs  text.rs
