[package]
name = "drawing"
version = "0.2.0"
authors = ["Olivier Lemoine <olivier@le-moine.fr>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/daedalus-aero-space/drawing"
description = "Build complex drawing for PDF, SVG, ..."

[dependencies]
algebr = "0.1.0"
macros = { path = "./macros", version = "0.1.0" }
