[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Drawing SVG"
categories = ["graphics", "gui", "rendering", "template-engine"]
keywords = ["graphics", "draw", "layout", "dioxus"]
edition = "2021"
license = "MIT"
name = "dessin-dioxus"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.22"

[dependencies]
dioxus = { version = "^0.7.0-alpha.3" }
data-encoding = "2.8.0"
dessin = { version = "0.8.22", path = "../dessin" }
dessin-svg = { version = "0.8.22", path = "../dessin-svg" }
image = "0.24"
nalgebra = "0.33"
