[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Dessin into image"
categories = [
	"graphics",
	"gui",
	"rendering",
	"template-engine",
	"multimedia::images",
]
keywords = ["graphics", "draw", "layout", "image"]
edition = "2021"
license = "MIT"
name = "dessin-image"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.21-pre"

[dependencies]
data-encoding = "^2.3.3"
dessin = { version = "0.8.21-pre", path = "../dessin" }
font-kit = "0.11.0"
image = "0.24"
imageproc = "^0.23.0"
nalgebra = "^0.33"
rand = "^0.8.5"
raqote = "0.8.2"
