[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Dessin into image"
categories = [
	"graphics",
	"gui",
	"rendering",
	"template-engine",
	"multimedia::images",
]
keywords = ["graphics", "draw", "layout", "image"]
edition = "2021"
license = "MIT"
name = "dessin-image"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.0"

[dependencies]
data-encoding = "^2.8.0"
dessin = { version = "0.8.0", path = "../dessin" }
font-kit = "0.14.2"
image = "0.24"
imageproc = "^0.25.0"
nalgebra = "^0.33"
rand = "^0.9.0"
raqote = "0.8.5"
