[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Dessin into image"
categories = [
	"graphics",
	"gui",
	"rendering",
	"template-engine",
	"multimedia::images",
]
keywords = ["graphics", "draw", "layout", "image"]
edition = "2021"
license = "MIT"
name = "dessin-image"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.23"

[dependencies]
data-encoding = "^2.9"
dessin = { version = "^0.8.23", path = "../dessin" }
font-kit = "^0.14"
image = "^0.25"
imageproc = "^0.25"
nalgebra = "^0.34"
raqote = "^0.8"
