[package]
description = "Build complex drawing for PDF, SVG, ..."
edition = "2021"
license = "MIT"
name = "dessin-macros"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.16-pre"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
