[package]
authors = [
    "Olivier Lemoine <olivier.lemoine@432technologies.com>",
    "Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Dessin to PDF"
categories = ["graphics", "gui", "rendering", "template-engine"]
keywords = ["graphics", "draw", "layout", "pdf"]
edition = "2021"
license = "MIT"
name = "dessin-pdf"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.21-pre"

[dependencies]
dessin = { version = "0.8.21-pre", path = "../dessin" }
fontdue = "^0.9"
image = "0.24"
nalgebra = "^0.33"
printpdf = { version = "^0.7", features = ["webp", "svg"] }
