[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Dessin to PDF"
categories = ["graphics", "gui", "rendering", "template-engine"]
keywords = ["graphics", "draw", "layout", "pdf"]
edition = "2021"
license = "MIT"
name = "dessin-pdf"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.23"

[dependencies]
dessin = { version = "^0.8.23", path = "../dessin" }
fontdue = "^0.9"
image = "^0.25"
nalgebra = "^0.34"
printpdf = { version = "^0.8", features = ["webp"] }
thiserror = "2.0.16"
