[package]
authors = [
	"Olivier Lemoine <olivier@le-moine.fr>",
	"Francois Morillon <francois.morillon@yahoo.fr>",
]
description = "Drawing SVG"
edition = "2021"
license = "MIT"
name = "dessin-svg"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.16-pre"

[dependencies]
data-encoding = "^2.5.0"
dessin = { version = "0.8.16-pre", path = "../dessin" }
image = "^0.24.8"
nalgebra = "^0.32.3"
rand = "^0.8.5"
