[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Drawing SVG"
categories = ["graphics", "gui", "rendering", "template-engine"]
keywords = ["graphics", "draw", "layout", "svg"]
edition = "2021"
license = "MIT"
name = "dessin-svg"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.23"

[dependencies]
data-encoding = "^2.9"
dessin = { version = "^0.8.23", path = "../dessin" }
image = "^0.25"
nalgebra = "^0.34"
