[package]
description = "Build complex drawing for PDF, SVG, ..."
edition = "2021"
license = "MIT"
name = "dessin"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.14-pre"

[features]
default = ["default-font"]
default-font = []

[dependencies]
dessin-macros = { path = "dessin-macros", version = "0.8.14-pre" }
fontdue = "^0.7.3"
image = "^0.24.6"
nalgebra = "^0.32.2"
once_cell = "^1.18.0"
# palette = "^0.7.2"

[dev-dependencies]
assert_float_eq = "1.1.3"
