[package]
authors = [
	"Olivier Lemoine <olivier.lemoine@432technologies.com>",
	"Francois Morillon <francois.morillon@432technologies.com>",
]
description = "Build complex drawing for PDF, SVG, Images or Dioxus"
categories = ["graphics", "gui", "rendering", "template-engine"]
keywords = ["graphics", "draw", "layout"]
edition = "2021"
license = "MIT"
name = "dessin"
repository = "https://github.com/432-technologies/dessin"
version = "0.8.23"

[features]
default = ["default-font"]
default-font = []

[dependencies]
dessin-macros = { path = "../dessin-macros", version = "^0.8.23" }
ecow = "^0.2"
fontdue = "^0.9"
image = "^0.25"
nalgebra = "^0.34"
palette = "^0.7"

[dev-dependencies]
assert_float_eq = "^1.1"
