[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
dessin = { version = "0.8.16-pre", path = "../dessin" }
dessin-svg = { version = "0.8.16-pre", path = "../dessin-svg" }
dessin-image = { version = "0.8.16-pre", path = "../dessin-image" }
dessin-pdf = { version = "0.8.16-pre", path = "../dessin-pdf" }

[[example]]
name = "432technologies"
path = "./432technologies.rs"

[[example]]
name = "animation"
path = "./animation.rs"
