[package]
name = "dessin-macros"
version = "0.8.6-pre"
edition = "2021"
license = "MIT"
repository = "https://github.com/432-technologies/dessin"
description = "Build complex drawing for PDF, SVG, ..."

[lib]
proc-macro = true

[dependencies]
syn = { version="2.0", features=["full"] }
quote = "1.0"
proc-macro2 = "1.0"
