[package]
name = "svg-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dessin = { version = "0.8", path = "../../dessin" }
dessin-svg = { version = "0.8", path = "../../dessin-svg" }
dessin-pdf = { version = "0.8", path = "../../dessin-pdf" }
